# sgxprm

./: .gitmodules  CMakeLists.txt  build.sh
src/: CMakeLists.txt
src/sgxprm/: sgxprm.edl
src/sgxprm/enc/: CMakeLists.txt  enc.cpp
src/sgxprm/host/: CMakeLists.txt  host.cpp
